welcome.lessons.welcome.array.arraycount9.ArrayCount9.scala.code
def arrayCount9(nums:Array[Int]): Int = {
  var a:Int=0
  for (b<-1 to nums.length-1){
    if (nums(a)=0){
      a=a+1
    }
  }
  return a
}